// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Component Should to increment the counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
    type="button"
  >
    +
  </button>
</div>
`;

exports[`ProductCard Component Should to render the component correctly 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
